# fastapi-stater

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
app/: alembic.ini  app.py  main.py
app/application/constants/: __init__.py
app/application/dependencies/: auth.py  current_user.py
app/application/dtos/: auth_schema.py  user_schema.py
app/application/exceptions/: __init__.py
app/application/services/: jwt_provider.py
app/config/: __init__.py
app/core/: app.py
app/core/config/: __init__.py
app/core/utils/: signleton.py
app/db/: __init__.py  base.py  dependencies.py  functions.py  models.py
app/db/migrations/: env.py
app/domain/auth/: auth_controller.py
app/domain/base/: base_model.py
app/domain/post/: post_controller.py  post_interface.py  post_model.py  post_repository.py  post_service.py
app/domain/user/: user_abstract.py  user_model.py  user_repository.py  user_schema.py  user_service.py
app/modules/: router.py
app/utils/: signleton.py
docker/: Dockerfile.local
env/: pyvenv.cfg
migrations/: env.py
migrations/versions/: 2024-08-11-16-14_07576e2d1b73.py
requirements/: base.txt
scripts/: change-commit-author.sh  docker-entrypoint.sh
src/: config.py  main.py
src/db/: base.py  dependency.py
src/modules/: router.py
tests/: conftest.py
tests/e2e/: test_auth_controller.py
tests/e2es/: test_auth_controller.py  test_post_controller.py  test_user_controller.py
tests/units/: test_signleton.py
(+38 files in other folders)
