[project]
name = "fastapi-stater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.6",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi[standard]>=0.112.1",
    "bcrypt>=4.2.0",
    "boto3>=1.35.9",
    "httpx>=0.27.0",
    "pre-commit>=3.8.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.4.0",
    "pyright>=1.1.381",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.9",
    "s3transfer>=0.10.2",
    "sqlalchemy>=2.0.32",
    "sqlmodel>=0.0.21",
    "ujson>=5.10.0",
    "uvicorn>=0.30.6",
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.pyright]
venvPath='.'
venv=".venv"
exclude=['.venv']

[tool.hatch.build.targets.wheel]
packages = ["app"]
